{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 8,
  "lineage": "3ee5543e-05a6-1122-8fd6-b15d9b06bc58",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-26T22:37:32.336-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-anthos-359617/global/firewalls/fw-allow-http",
            "log_config": [],
            "name": "fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/vpc-custom",
            "priority": 1000,
            "project": "gcp-anthos-359617",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/firewalls/fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-26T22:37:32.255-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-anthos-359617/global/firewalls/fw-allow-https",
            "log_config": [],
            "name": "fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/vpc-custom",
            "priority": 1000,
            "project": "gcp-anthos-359617",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/firewalls/fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-26T22:37:32.257-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-anthos-359617/global/firewalls/fw-allow-ssh",
            "log_config": [],
            "name": "fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/vpc-custom",
            "priority": 1000,
            "project": "gcp-anthos-359617",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/firewalls/fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220823",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/zones/us-central1-a/disks/apache-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-anthos-359617/zones/us-central1-a/instances/apache-vm",
            "instance_id": "1084669581192336193",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "dCHfy4QMF_s=",
            "metadata_startup_script": "sudo apt-get update; \r\nsudo apt-get install -yq build-essential apache2;\r\nsudo systemctl start apache2;\r\nsudo systemctl enable apache2;\r\n",
            "name": "apache-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.225.159.50",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/vpc-custom",
                "network_ip": "10.10.10.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/regions/us-central1/subnetworks/subnet-custom",
                "subnetwork_project": "gcp-anthos-359617"
              }
            ],
            "project": "gcp-anthos-359617",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/zones/us-central1-a/instances/apache-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.template_file.linux-metadata",
            "google_compute_network.vpc",
            "google_compute_subnetwork.network_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcp-anthos-359617/global/networks/vpc-custom",
            "mtu": 0,
            "name": "vpc-custom",
            "project": "gcp-anthos-359617",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/vpc-custom"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-26T22:37:33.496-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/gcp-anthos-359617/regions/us-central1/subnetworks/subnet-custom",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "subnet-custom",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/global/networks/vpc-custom",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-anthos-359617",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-anthos-359617/regions/us-central1/subnetworks/subnet-custom",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}